--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pinia": "^2.1.7",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.4.21",
+    "vue-i18n": "^9.11.0",
     "vue-router": "^4.3.0",
     "vuetify": "^3.5.14"
   },
