--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.6.8",
     "pinia": "^2.1.7",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.4.21",
