--- a/package.json
+++ b/package.json
@@ -16,15 +16,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@mdi/font": "^7.4.47",
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
-    "roboto-fontface": "^0.10.0",
-    "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
     "vue-i18n": "^9.11.0",
-    "vue-router": "^4.3.0",
-    "vuetify": "^3.5.14"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.10.1",
@@ -46,12 +42,10 @@
     "sass": "^1.74.1",
     "start-server-and-test": "^2.0.3",
     "typescript": "~5.4.4",
-    "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.8",
     "vite-plugin-pages": "^0.32.1",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vite-plugin-vuetify": "^2.0.3",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.10"
   }
