--- a/package.json
+++ b/package.json
@@ -18,35 +18,39 @@
   "dependencies": {
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-i18n": "^9.11.0",
-    "vue-router": "^4.3.0"
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.51.0",
+    "vue": "^3.4.25",
+    "vue-i18n": "^9.13.1",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.10.1",
+    "@rushstack/eslint-patch": "^1.10.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.12.4",
+    "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
-    "cypress": "^13.7.2",
+    "cypress": "^13.8.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-vue": "^9.24.0",
+    "eslint-plugin-cypress": "^3.0.0",
+    "eslint-plugin-vue": "^9.25.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
-    "sass": "^1.74.1",
+    "sass": "^1.75.0",
     "start-server-and-test": "^2.0.3",
-    "typescript": "~5.4.4",
+    "typescript": "~5.4.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.8",
+    "vite": "^5.2.10",
     "vite-plugin-pages": "^0.32.1",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.10"
+    "vitest": "^1.5.0",
+    "vue-tsc": "^2.0.14"
   }
 }
