--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,8 @@
   "include": [
     "env.d.ts",
     "src/**/*",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "components.d.ts"
   ],
   "exclude": [
     "src/**/__tests__/*"
