--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore --ignore-pattern 'src/pb'",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/google-protobuf": "^3.15.12",
     "axios": "^1.6.8",
+    "google-protobuf": "^3.21.2",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -50,7 +52,7 @@
     "vite": "^5.2.10",
     "vite-plugin-pages": "^0.32.1",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vitest": "^1.5.0",
+    "vitest": "^1.5.1",
     "vue-tsc": "^2.0.14"
   }
 }
