--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-charts": "^25.1.41",
     "@types/google-protobuf": "^3.15.12",
     "axios": "^1.6.8",
     "google-protobuf": "^3.21.2",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primevue": "^3.51.0",
-    "vue": "^3.4.25",
+    "primevue": "^3.52.0",
+    "vue": "^3.4.26",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.2"
   },
@@ -40,7 +41,7 @@
     "@vue/tsconfig": "^0.5.1",
     "cypress": "^13.8.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-cypress": "^3.0.0",
+    "eslint-plugin-cypress": "^3.0.2",
     "eslint-plugin-vue": "^9.25.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
@@ -52,7 +53,7 @@
     "vite": "^5.2.10",
     "vite-plugin-pages": "^0.32.1",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vitest": "^1.5.1",
+    "vitest": "^1.5.2",
     "vue-tsc": "^2.0.14"
   }
 }
