chore: "Implement environment variable for Syncfusion license"
- Added `VITE_SYNCFUSION_LICENSE` to the `.env` file and `.gitignore`
- Created a new `.template.env` file with `VITE_SYNCFUSION_LICENSE`
- Added `VITE_SYNCFUSION_LICENSE` to the environment variables in the GitHub workflow
- Updated `env.d.ts` to include an interface `ImportMetaEnv` with `VITE_SYNCFUSION_LICENSE`
- Replaced hardcoded license in `src/main.ts` with `VITE_SYNCFUSION_LICENSE` from the environment variables

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
           echo "REPOSITORY_LC=$LC_REPO_NAME" >> ${GITHUB_ENV}
           echo "SHORT_SHA=$(echo ${SHA} | cut -c1-7)" >> ${GITHUB_ENV}
           echo "REPOSITORY_NAME_ONLY="${LC_REPO_NAME/"${LC_USER_NAME}/"/""}"" >> ${GITHUB_ENV}
+          echo "VITE_SYNCFUSION_LICENSE=$SYNCFUSION_LICENSE" > .env
 
       - name: setup node
         uses: actions/setup-node@v4
