--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,13 +39,14 @@ jobs:
           echo "REPOSITORY_LC=$LC_REPO_NAME" >> ${GITHUB_ENV}
           echo "SHORT_SHA=$(echo ${SHA} | cut -c1-7)" >> ${GITHUB_ENV}
           echo "REPOSITORY_NAME_ONLY="${LC_REPO_NAME/"${LC_USER_NAME}/"/""}"" >> ${GITHUB_ENV}
-          echo "VITE_SYNCFUSION_LICENSE=$SYNCFUSION_LICENSE" > .env
 
       - name: setup node
         uses: actions/setup-node@v4
         with:
           node-version: "20.12.1"
-      - run: npm i && npm run build
+      - run: |
+          echo "VITE_SYNCFUSION_LICENSE=$SYNCFUSION_LICENSE" > .env
+          npm i && npm run build
 
       - name: log in to the github registry
         uses: docker/login-action@v3
