--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@syncfusion/ej2-vue-charts": "^25.1.42",
     "@types/google-protobuf": "^3.15.12",
     "axios": "^1.6.8",
+    "firebase": "^10.11.1",
     "google-protobuf": "^3.21.2",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
@@ -26,7 +27,8 @@
     "primevue": "^3.52.0",
     "vue": "^3.4.26",
     "vue-i18n": "^9.13.1",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vuefire": "^3.1.23"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.10.2",
@@ -53,7 +55,7 @@
     "vite": "^5.2.10",
     "vite-plugin-pages": "^0.32.1",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vitest": "^1.5.2",
+    "vitest": "^1.5.3",
     "vue-tsc": "^2.0.15"
   }
 }
