--- a/nginx.conf
+++ b/nginx.conf
@@ -67,6 +67,10 @@ http {
             alias /var/www/android/;
         }
 
+        location /ads.txt {
+            alias /usr/share/nginx/adsense/ads.txt;
+        }
+
         location / {
             root /usr/share/nginx/html/tmt-dist;
             index index.html;
