feat: "Implement AssetLinks and Update Server Configurations"
- Added `assetlinks` to the `nginx` server's HTML directory
- Created new `assetlinks.json` file for `aasa`
- Created new `assetlinks.json` for `android`
- Updated `nginx.conf` to alias new `assetlinks` path for `aasa` and `android`
- Added new `robots.txt` file in the public directory to disallow all bots

--- a/nginx.conf
+++ b/nginx.conf
@@ -59,12 +59,12 @@ http {
         }
 
         location /.well-known/apple-app-site-association {
-            alias /var/www/aasa/;
+            alias /usr/share/nginx/html/assetlinks/aasa/;
             index assetlinks.json;
         }
 
         location /.well-known {
-            alias /var/www/android/;
+            alias /usr/share/nginx/html/assetlinks/android/;
         }
 
         location / {
