--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@chindada/toc-trade-protobuf": "^0.1.4",
     "@syncfusion/ej2-vue-charts": "^25.2.4",
-    "@types/google-protobuf": "^3.15.12",
     "axios": "^1.6.8",
     "firebase": "^10.12.0",
-    "google-protobuf": "^3.21.2",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -31,7 +30,7 @@
     "vuefire": "^3.1.23"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.10.2",
+    "@rushstack/eslint-patch": "^1.10.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
@@ -46,9 +45,9 @@
     "eslint-plugin-cypress": "^3.2.0",
     "eslint-plugin-vue": "^9.26.0",
     "jsdom": "^24.0.0",
-    "npm-run-all2": "^6.1.2",
+    "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
-    "sass": "^1.77.1",
+    "sass": "^1.77.2",
     "start-server-and-test": "^2.0.3",
     "typescript": "~5.4.5",
     "unplugin-vue-components": "^0.27.0",
@@ -56,6 +55,6 @@
     "vite-plugin-pages": "^0.32.1",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.17"
+    "vue-tsc": "^2.0.19"
   }
 }
