--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,16 +45,16 @@ jobs:
         with:
           node-version: "20.17.0"
       - run: |
-          echo "VITE_SYNCFUSION_LICENSE=$SYNCFUSION_LICENSE" > .env
-          echo "VITE_FIREBASE_API_KEY=$FIREBASE_API_KEY" >> .env
-          echo "VITE_FIREBASE_AUTH_DOMAIN=$FIREBASE_AUTH_DOMAIN" >> .env
-          echo "VITE_FIREBASE_DATABASE_URL=$FIREBASE_DATABASE_URL" >> .env
-          echo "VITE_FIREBASE_PROJECT_ID=$FIREBASE_PROJECT_ID" >> .env
-          echo "VITE_FIREBASE_STORAGE_BUCKET=$FIREBASE_STORAGE_BUCKET" >> .env
-          echo "VITE_FIREBASE_MESSAGING_SENDER_ID=$FIREBASE_MESSAGING_SENDER_ID" >> .env
-          echo "VITE_FIREBASE_APP_ID=$FIREBASE_APP_ID" >> .env
-          echo "VITE_FIREBASE_MEASUREMENT_ID=$FIREBASE_MEASUREMENT_ID" >> .env
-          npm i && npm run build
+          echo "VITE_SYNCFUSION_LICENSE=$SYNCFUSION_LICENSE" > .env && \
+          echo "VITE_FIREBASE_API_KEY=$FIREBASE_API_KEY" >> .env && \
+          echo "VITE_FIREBASE_AUTH_DOMAIN=$FIREBASE_AUTH_DOMAIN" >> .env && \
+          echo "VITE_FIREBASE_DATABASE_URL=$FIREBASE_DATABASE_URL" >> .env && \
+          echo "VITE_FIREBASE_PROJECT_ID=$FIREBASE_PROJECT_ID" >> .env && \
+          echo "VITE_FIREBASE_STORAGE_BUCKET=$FIREBASE_STORAGE_BUCKET" >> .env && \
+          echo "VITE_FIREBASE_MESSAGING_SENDER_ID=$FIREBASE_MESSAGING_SENDER_ID" >> .env && \
+          echo "VITE_FIREBASE_APP_ID=$FIREBASE_APP_ID" >> .env && \
+          echo "VITE_FIREBASE_MEASUREMENT_ID=$FIREBASE_MEASUREMENT_ID" >> .env && \
+          npm i -g pnpm && pnpm install && pnpm build
         env:
           SYNCFUSION_LICENSE: ${{ secrets.SYNCFUSION_LICENSE }}
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
