--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
@@ -17,7 +18,8 @@
   },
   "dependencies": {
     "@chindada/toc-trade-protobuf": "^0.1.11",
-    "@syncfusion/ej2-vue-charts": "^27.1.48",
+    "@syncfusion/ej2-base": "^27.1.50",
+    "@syncfusion/ej2-vue-charts": "^27.1.50",
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
     "pinia": "^2.2.2",
@@ -34,7 +36,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.6.1",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
